NOD-499 Implemented generic query API
